--- a/bundles/GeneratorBundle/Template/component/default/administrator/model/form/{{controller.item.name.lower}}.xml
+++ b/bundles/GeneratorBundle/Template/component/default/administrator/model/form/{{controller.item.name.lower}}.xml
@@ -9,7 +9,7 @@
 			label="JGLOBAL_TITLE"
 			description="JFIELD_TITLE_DESC"
 			required="true"
-			class="input-xxlarge"
+			class="input-xxlarge required"
 			/>
 
 		<field name="alias"
