Rename published to state #22

--- a/bundles/GeneratorBundle/Template/component/default/administrator/model/form/{{controller.item.name.lower}}.xml
+++ b/bundles/GeneratorBundle/Template/component/default/administrator/model/form/{{controller.item.name.lower}}.xml
@@ -57,7 +57,7 @@
 		align="right"
 		horz="true">
 
-		<field name="published"
+		<field name="state"
 			type="list"
 			label="JSTATUS"
 			description="JFIELD_PUBLISHED_DESC"
