Build index & move some files to front

--- a/bundles/GeneratorBundle/Template/component/default/site/asset/css/main.css
+++ b/bundles/GeneratorBundle/Template/component/default/site/asset/css/main.css
@@ -4,3 +4,30 @@
  * Copyright 2014 SMS Taiwan
  * License GNU General Public License version 2 or later; see LICENSE.txt.
  */
+
+
+/* GLOBAL */
+
+
+/* BODY */
+
+
+/* TYPO */
+
+
+/* LAYOUT */
+
+
+/* CONTENT */
+
+
+/* FILTER */
+
+
+/* TABLE */
+
+
+/* FORM */
+
+
+/* FOOTER */
