Decouple mootools and fix finder

--- a/bundles/GeneratorBundle/Template/component/default/administrator/model/form/{{controller.item.name.lower}}.xml
+++ b/bundles/GeneratorBundle/Template/component/default/administrator/model/form/{{controller.item.name.lower}}.xml
@@ -43,6 +43,7 @@
 			label="{{extension.element.upper}}_IMAGES"
 			description="{{extension.element.upper}}_IMAGES_DESC"
 			preview="true"
+			root="images"
 			/>
 
 		<field name="url"
