Update com tmpl

--- a/bundles/GeneratorBundle/Template/component/default/administrator/model/form/{{controller.item.name.lower}}.xml
+++ b/bundles/GeneratorBundle/Template/component/default/administrator/model/form/{{controller.item.name.lower}}.xml
@@ -93,7 +93,7 @@
 
 		<field name="publish_down"
 			type="calendar"
-			label="{{extension.element.upper}}_PUBLISHED_DOWN"
+			label="{{extension.element.upper}}_PUBLISH_DOWN"
 			description="{{extension.element.upper}}_PUBLISH_DOWN_DESC"
 			/>
 
